# typed

./: .gitignore  README.md  package.yaml  stack.yaml  typed.cabal
app/: Main.hs
attapl/: Cargo.toml
attapl/src/: lib.rs  main.rs  spec.rs  systems.rs
attapl/src/systems/: linear.rs  simply.rs
attapl/tests/: infer.rs  linear.rs  simply.rs
src/: AExp.hs  Exception.hs  Init.hs  Mu.hs  Preliminaries.hs  Recursive.hs  Reference.hs  Simply.hs  SimplyExt.hs  Subtyping.hs  UnAExp.hs  Untyped.hs  Util.hs
src/Expr/: Arith.hs
src/Lambda/: Mu.hs
src/Lambda/Explicit/: Exception.hs  Recursive.hs  Reference.hs  Simply.hs  SimplyExt.hs  Subtyping.hs  Untyped.hs
src/Lambda/Recon/: Simply.hs
src/Preliminary/: Types.hs
src/Typed/: Arith.hs  Exception.hs  Reference.hs  Simply.hs  SimplyExt.hs  Subtyping.hs
src/Untyped/: .#Arith.hs  Arith.hs  Untyped.hs
tapl/: package.yaml
tapl/src/: Preliminaries.hs
tapl/src/Typed/: Arith.hs  Reference.hs
tapl/src/Untyped/: Untyped.hs
tapl/test/Typed/: SimplyExtTest.hs  SubtypingTest.hs
test/: AExpTest.hs  ArithTest.hs  ExceptionTest.hs  MuTest.hs  RecursiveTest.hs  ReferenceTest.hs  SimplyExtTest.hs  SimplyTest.hs  Spec.hs  SubtypingTest.hs  UnAExpTest.hs  UntypedTest.hs
test/Expr/: ArithTest.hs
test/Lambda/: MuTest.hs
test/Lambda/Explicit/: ExceptionTest.hs  RecursiveTest.hs  ReferenceTest.hs  SimplyExtTest.hs  SimplyTest.hs  SubtypingTest.hs  UntypedTest.hs
test/Typed/: ArithTest.hs  ExceptionTest.hs  ReferenceTest.hs  SimplyExtTest.hs  SimplyTest.hs
test/Untyped/: ArithTest.hs  UntypedTest.hs
theory/: CR.thy  Inference.thy  Lambda.thy  Simply.thy
