name:                typed
version:             0.3.0.0
synopsis:            Typed Lambda Calculus
description:         Please see README.md
homepage:            https://github.com/myuon/typed
license:             MIT
license-file:        LICENSE
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com
copyright:           2016 myuon
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AExp, Untyped, Simply, Mu, Recursive
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , exceptions
  default-language:    Haskell2010

test-suite typed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , typed
                     , tasty
                     , tasty-hunit
                     , containers
                     , lens
                     , mtl
                     , exceptions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myuon/typed
